--- a/vistaprincipal.html
+++ b/vistaprincipal.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Citas UAL</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -122,6 +123,13 @@
 
     </div>
   </main>
+
+  <a href="https://wa.me/8712390715?text=Hola,%20quisiera%20más%20información%20sobre%20las%20citas." 
+   class="whatsapp-btn" 
+   target="_blank"
+   title="Contáctanos por WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+</a>
 
   <footer>
     © 2025 Universidad Autónoma de La Laguna - Sistema de citas
