cambio en el estilo del header de la vista de admin

--- a/panelAdmin.html
+++ b/panelAdmin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panel de Administración - Clínica de Optometría Escolar</title>
+    <title>Clínica de Optometría UAL - Panel de Administración </title>
     <link rel="stylesheet" href="estiloAdmin.css" />
     <link
       rel="stylesheet"
@@ -58,8 +58,8 @@
 
     <div class="container">
       <header>
-        <h1>Panel de Administración</h1>
-        <p class="subtitle">Clínica de Optometría Escolar</p>
+        <h1>Clínica de Optometría UAL</h1>
+        <p class="subtitle">Panel de Administración</p>
       </header>
 
       <div class="admin-navigation">
