--- a/login.html
+++ b/login.html
@@ -80,16 +80,19 @@
         <div id="message"></div>
         
         <form id="loginForm" class="login-form">
-            <input type="text" id="username" placeholder="Nombre de Usuario" required value="estudiante_optometria">
-            <input type="password" id="password" placeholder="Contraseña" required value="estudiantepass">
+            <input type="text" id="username" placeholder="Nombre de Usuario">
+            <div style="position: relative; margin-bottom: 20px;"> 
+                <input type="password" id="password" placeholder="Contraseña" style="padding-right: 40px; margin-bottom: 0;">
+                <i class="fas fa-eye-slash" id="togglePassword" style="position: absolute; right: 15px; top: 50%; transform: translateY(-50%); cursor: pointer; color: var(--gray);"></i>
+            </div>
             <button type="submit">Iniciar Sesión</button>
         </form>
 
         <p style="margin-top: 25px; font-size: 0.9rem; color: var(--gray);">
             <strong>Usuarios de prueba:</strong><br>
-            • Administrador: <strong>admin</strong> / <strong>adminpass</strong><br>
-            • Coordinador: <strong>coordinador</strong> / <strong>coordinadorpass</strong><br>
-            • Estudiante: <strong>estudiante_optometria</strong> / <strong>estudiantepass</strong>
+            • Administrador: <strong>admin</strong> / <strong>adminUAL</strong><br>
+            • Coordinador: <strong>coordinador</strong> / <strong>cooUAL</strong><br>
+            • Estudiante: <strong>optometrista</strong> / <strong>optoUAL</strong>
         </p>
     </div>
 
@@ -148,6 +151,22 @@
 
         // Auto-enfocar el campo de usuario
         document.getElementById('username').focus();
+
+
+        // AGREGAR: Funcionalidad de alternar la visibilidad de la contraseña
+        const togglePassword = document.getElementById('togglePassword');
+        const passwordInput = document.getElementById('password');
+
+        if (togglePassword && passwordInput) {
+            togglePassword.addEventListener('click', function() {
+                const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+                passwordInput.setAttribute('type', type);
+                
+                // Alternar el icono del ojo
+                this.classList.toggle('fa-eye');
+                this.classList.toggle('fa-eye-slash');
+            });
+        }
     </script>
 </body>
 </html>
